--- a/index.html
+++ b/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Coffee Shop</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* 2025 hidden gem: component-level responsive */
-    .card {
-      container-type: inline-size;
-    }
+    .card { container-type: inline-size; }
     @container (min-width: 300px) {
-      .card-title {
-        font-size: 2rem;
-      }
+      .card-title { font-size: 2rem; }
     }
   </style>
 </head>
 <body class="bg-gray-100">
   <header class="text-center p-6">
-    <h1 class="text-3xl font-bold text-gray-800">Copper’s Coffee</h1>
+    <h1 class="text-3xl font-bold text-gray-800">Copper's Coffee</h1>
   </header>
   <main class="max-w-4xl mx-auto p-4 grid gap-6 md:grid-cols-3">
     <article class="card bg-white rounded shadow p-4">
